# research_project_1

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: docker-image.yml
docker/: Dockerfile
docs/: _config.yml  _toc.yml  api.rst  index.md  mwe.ipynb
src/research_project_1/: __init__.py  __main__.py  cli.py
tests/: test_version.py
