[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "research_project_1"
version = "0.1.0"
description = "Tools ensuring reproducible and standarized Python packaging."
authors = [{name = "Jørgen S. Dokken", email = "dokken@simula.no"}]
license = {file = "LICENSE"}
readme = "README.md"

[project.scripts]
research_project_1 = "research_project_1.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
]
linting = [
    "mypy",
    "flake8",
]
docs = [
   "jupyter-book",
   "jupytext",
]
all = [
   "research_project_1[test]",
   "research_project_1[linting]",
   "research_project_1[docs]"
]

 
[tool.pytest.ini_options]
addopts = [
   "--import-mode=importlib",
]

testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = [
    "docs/",
    "build/"
]
# Folder to check with mypy
files = [ 
    "src",
    "tests"
]
